Fixed alignment issues with dnn-toggle
Fixed an alignment issue with dnn-toggle that prevented aligning it properly externally using plain flex or grid css.

--- a/src/components/dnn-toggle/dnn-toggle.scss
+++ b/src/components/dnn-toggle/dnn-toggle.scss
@@ -22,7 +22,6 @@ button {
     border-radius: var(--border-radius, var(--dnn-controls-radius, 0.75em));
     padding: 0.1em;
     position: relative;
-    top: 0.25em;
     margin: 0;
     transition: background-color 300ms ease-in-out;
     position: relative;
